# ThirdParty-SCIP

./: .gitattributes  .gitignore  INSTALL.SCIP  Makefile.am  Makefile.in  coinscip-uninstalled.pc.in  coinscip.pc.in  config_scip.h.in  configure  configure.ac  lpiswitch.c  lpiswitch.h  lpiswitch_rename.h  lpiswitch_spx2.cpp  lpiswitch_unrename.h
1.2/: Makefile.in
